# covid19_dailyupdates

./: main.py  pyproject.toml
notebooks/: Untitled.ipynb
scripts/: extract.py
