[tool.poetry]
name = "daily_updates"
version = "0.1.0"
description = ""
authors = ["Ihsara <longchau21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.8.2"
pandas = "^1.0.2"
bokeh = "^2.0.0"
jupyterlab = "^2.0.1"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
